--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@badescuCosmin/template-react-component-library",
+  "name": "@badescuCosmin/test-npm",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/badescuCosmin"
   },
-  "version": "2.0.0",
+  "version": "2.0.14",
   "description": "testpackage",
   "scripts": {
     "rollup": "rollup -c"
@@ -14,17 +14,41 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@types/react": "^18.0.12",
-    "react": "^18.2.0",
+    "@types/lodash": "^4.14.182",
+    "@types/react-input-mask": "^2.0.4",
     "rollup": "^2.75.6",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-svg-import": "^1.6.0",
+    "svg-url-loader": "^7.1.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
+  },
+  "peerDependencies": {
+    "@types/react": "^17.0.34",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.2.1",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
+    "react-input-mask": "^2.0.4",
+    "rollup-plugin-inline-svg": "^3.0.3",
+    "rollup-plugin-svg": "^2.0.0",
+    "rollup-plugin-url": "^3.0.1"
+  }
 }
