--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/badescuCosmin"
   },
-  "version": "2.0.14",
+  "version": "2.0.15",
   "description": "testpackage",
   "scripts": {
     "rollup": "rollup -c"
@@ -18,9 +18,6 @@
     "@types/react-input-mask": "^2.0.4",
     "rollup": "^2.75.6",
     "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-svg-import": "^1.6.0",
-    "svg-url-loader": "^7.1.1",
-    "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
@@ -41,14 +38,10 @@
     "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.4",
     "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-url": "^7.0.0",
     "@svgr/rollup": "^6.2.1",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
-    "react-input-mask": "^2.0.4",
-    "rollup-plugin-inline-svg": "^3.0.3",
-    "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-url": "^3.0.1"
+    "react-input-mask": "^2.0.4"
   }
 }
