--- a/package.json
+++ b/package.json
@@ -3,22 +3,37 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/badescuCosmin"
   },
-  "version": "2.0.15",
+  "version": "3.0.2",
   "description": "testpackage",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "cosmin badescu",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@types/lodash": "^4.14.182",
     "@types/react-input-mask": "^2.0.4",
+    "babel-loader": "^8.2.5",
     "rollup": "^2.75.6",
     "rollup-plugin-dts": "^4.2.2",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "@types/react": "^17.0.34",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "@types/react": "^17.0.34",
