--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/badescuCosmin"
   },
-  "version": "3.0.2",
-  "description": "testpackage",
+  "version": "3.0.4",
+  "description": "mui-lib",
   "scripts": {
     "rollup": "rollup -c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "cosmin badescu",
-  "license": "ISC",
+  "license": "Tevvo",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@rollup/plugin-commonjs": "^22.0.0",
@@ -40,12 +46,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
